--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
     },
     "autoload": {
 		"files": [
-            "src/loader.php",
-            
+            "src/loader.php"
         ],
         "psr-4": {
             "Elveneek\\": "src/Elveneek/"
