--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "nyholm/psr7": "^1.2",
         "symfony/var-dumper": "^5.0",
         "vlucas/phpdotenv": "^5.0",
-        "hansott/psr7-cookies": "^3.0",
+        "hansott/psr7-cookies": "^3.0"
     },
     "autoload": {
 		"files": [
