--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,19 @@
         }
     ],
     "require": {
-        "php": ">=7.4"
-     
+        "php": ">=7.4",
+        "psr/http-message": "~1.0",
+        "psr/http-server-handler": "~1.0",
+        "psr/http-server-middleware": "^1.0",
+        "spiral/roadrunner": "^2.1.1",
+        "nyholm/psr7": "^1.2",
+        "symfony/var-dumper": "^5.0",
+        "vlucas/phpdotenv": "^5.0",
+        "hansott/psr7-cookies": "^3.0",
+        "php-di/php-di": "dev-master"
     },
     "autoload": {
-		"files": [
+        "files": [
             "src/loader.php"
         ],
         "psr-4": {
