--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "psr/http-message": "~1.0",
         "psr/http-server-handler": "~1.0",
         "psr/http-server-middleware": "^1.0",
-        "spiral/roadrunner": "^2.1.1",
+        "spiral/roadrunner": "^v2.12.1",
         "nyholm/psr7": "^1.2",
         "nyholm/psr7-server": "^1.0.2",
         "symfony/var-dumper": "^5.0",
