--- a/composer.json
+++ b/composer.json
@@ -13,18 +13,16 @@
         }
     ],
     "require": {
-        "php": ">=7.4",
-        "psr/http-message": "~1.0",
-        "psr/http-server-handler": "~1.0",
-        "psr/http-server-middleware": "^1.0",
-        "spiral/roadrunner": "^v2.12.1",
-        "nyholm/psr7": "^1.2",
-        "nyholm/psr7-server": "^1.0.2",
-        "symfony/var-dumper": "^5.0",
-        "vlucas/phpdotenv": "^5.0",
-        "hansott/psr7-cookies": "^3.0",
-        "php-di/php-di": "dev-master",
-        "elveneek/activerecord": "^0.0.3"
+        "spiral/roadrunner": "^2023.3",
+        "nyholm/psr7": "^1.8",
+        "nyholm/psr7-server": "^1.1",
+        "symfony/var-dumper": "^7.0",
+        "vlucas/phpdotenv": "^5.6",
+        "hansott/psr7-cookies": "^4.0",
+        "php-di/php-di": "^7.0",
+        "psr/http-message": "^2.0",
+        "psr/http-server-handler": "^1.0",
+        "psr/http-server-middleware": "^1.0"
     },
     "autoload": {
         "files": [
