--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
         "php-di/php-di": "^7.0",
         "psr/http-message": "^2.0",
         "psr/http-server-handler": "^1.0",
-        "psr/http-server-middleware": "^1.0"
+        "psr/http-server-middleware": "^1.0",
+        "spiral/roadrunner-http": "^3.4",
+        "elveneek/activerecord": "^0.0.3"
     },
     "autoload": {
         "files": [
