Добавлены тесты на View, изменение работы View
View теперь работает проще и однозначнее, не вызывает методов родительского класса

--- a/composer.json
+++ b/composer.json
@@ -33,5 +33,13 @@
         "psr-4": {
             "Elveneek\\": "src/Elveneek/"
         }
+    },
+    "require-dev": {
+        "pestphp/pest": "^2.34"
+    },
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     }
 }
